# trafficserver

./: .asf.yaml  .clang-analyzer  .clang-format  .clang-tidy  .cmake-format.yaml  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .indent.pro  .lgtm.yml  .perltidyrc  .pr  .ripgreprc  .slicer.h.swp  .style.yapf  .tsan_suppressions  .vimrc  .yapfignore  AGENTS.md  CACHE_RWLOCK_ANALYSIS.md  CACHE_RWLOCK_BENCHMARK_RESULTS.md  CHANGELOG-10.0.0  CHANGELOG-10.0.1  CHANGELOG-10.0.2  CHANGELOG-10.0.3  CHANGELOG-10.0.4  CHANGELOG-10.0.5  CHANGELOG-10.0.6  CHANGELOG-10.1.0  CHANGELOG-10.1.1  CHANGELOG-10.1.2  CHANGELOG-6.2.0  CHANGELOG-6.2.1  CHANGELOG-6.2.2  CHANGELOG-6.2.3  CHANGELOG-7.1.0  CHANGELOG-7.1.1  CHANGELOG-7.1.10  CHANGELOG-7.1.11  (+116 more)
cmd/: Makefile.am
cmd/traffic_cache_tool/: CacheDefs.cc  CacheDefs.h  CacheScan.cc  CacheScan.h  CacheStore.h  CacheTool.cc  Command.cc  Command.h  File.cc  File.h  Makefile.am  Makefile.inc
cmd/traffic_cop/: Makefile.am  traffic_cop.cc
cmd/traffic_crashlog/: Makefile.am  procinfo.cc  traffic_crashlog.cc  traffic_crashlog.h
cmd/traffic_ctl/: Makefile.am  Makefile.inc  alarm.cc  config.cc  host.cc  metric.cc  plugin.cc  server.cc  storage.cc  traffic_ctl.cc  traffic_ctl.h
cmd/traffic_layout/: Makefile.am  engine.cc  engine.h  file_system.cc  file_system.h  info.cc  traffic_layout.cc
cmd/traffic_line/: Makefile.am  traffic_line.cc
cmd/traffic_logcat/: Makefile.am  Makefile.inc
cmd/traffic_logstats/: Makefile.am
cmd/traffic_manager/: AddConfigFilesHere.cc  Main.cc  Main.h  Makefile.am  MgmtHandlers.cc  MgmtHandlers.h  StatProcessor.cc  StatProcessor.h  StatType.cc  StatType.h  StatXML.cc  StatXML.h  WebOverview.cc  WebOverview.h  metrics.cc  metrics.h  stats.txt  test_metrics.cc  traffic_manager.cc
cmd/traffic_quic/: Makefile.am  quic_client.cc  quic_client.h  traffic_quic.cc
cmd/traffic_server/: InkAPITest.cc  Makefile.am  (+2 more)
configs/: CMakeLists.txt  Makefile.am  cache.config.default  cache_override.yaml.default  certificates.yaml.default  ip_allow.config.default  ip_allow.schema.json  ip_allow.yaml.default  jsonrpc.yaml.default  logging.yaml.default  parent.schema.json  parent.yaml.default  records.config.default.in  records.schema.json  records.yaml.default.in  records.yaml.forward  remap.config.default  sni.yaml.default  socks.config.default  splitdns.yaml.default  ssl_multicert.config.default  ssl_multicert.yaml.default  ssl_server_name.yaml.default  storage.config.default.in  storage.yaml.default.in  strategies.schema.json  strategies.yaml.default  virtualhost.yaml.default  volume.config.default  volume.yaml.default
doc/: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile.am  Pipfile  README.md  checkvers.py  checkvers.sh  common.defs  conf.cmake.in.py  conf.py  doap.rdf  docutils.conf  getting-started.en.rst  glossary.en.rst  index-latex.rst  index.rst  mainpage.doc  manpages.cmake.in.py  manpages.py  pip_requirements.txt  plantuml_fetch.sh  pyproject.toml  robots.txt  sbuild
example/: CMakeLists.txt  Makefile.am  Makefile.inc  README.internal
install/: Makefile.am  start_traffic_shell  trafficserver  trafficserver.in
iocore/: CMakeLists.txt  Makefile.am
lib/: CMakeLists.txt  ChangeLog  Makefile.am
librecords/: I_RecAlarms.h  I_RecCore.h  I_RecDefs.h  I_RecProcess.h  I_RecSignals.h  Makefile.am  P_RecCompatibility.h  P_RecCore.h  P_RecCore.i  P_RecDefs.h  P_RecMessage.h  P_RecProcess.h  P_RecTree.h  P_RecUtils.h  RecCompatibility.cc  RecCore.cc  RecLocal.cc  RecMessage.cc  RecMutex.cc  RecProcess.cc  RecTree.cc  RecUtils.cc  test_I_RecLocal.cc  test_P_RecProcess.cc  test_RecTree.cc  test_RecordsConfig.cc  test_records.config
mgmt/: AddConfigFilesHere.cc  Alarms.cc  Alarms.h  AutoConf.cc  BaseManager.cc  BaseManager.h  CMakeLists.txt  ConfigManager.cc  ConfigManager.h  Cop.h  DerivativeMetrics.cc  DerivativeMetrics.h  FileManager.cc  FileManager.h  LocalManager.cc  LocalManager.h  Main.cc  Main.h  Makefile.am  MgmtDefs.h  MultiFile.cc  MultiFile.h  ProcessManager.cc  ProcessManager.h  ProxyConfig.cc  ProxyConfig.h  RecordsConfig.cc  RecordsConfig.h  RecordsConfigUtils.cc  Rollback.cc  Rollback.h  WebMgmtUtils.cc  WebMgmtUtils.h  WebPluginList.h  YamlCfg.cc  YamlCfg.h
plugins/: CMakeLists.txt  Makefile.am  suppression.txt
proxy/: AbstractBuffer.cc  AbstractBuffer.h  CMakeLists.txt  CacheControl.cc  CacheControl.h  CacheInspectorAllow.cc  CacheInspectorAllow.h  CheckStats.cc  ClassH.txt  ClusterHashStandalone.cc  ClusterHashStandalone.h  CompletionUtil.h  Config.cc  Config.h  ConfigParse.h  ControlBase.cc  ControlBase.h  ControlMatcher.cc  ControlMatcher.h  ControlMatcher.inl  CoreUtils.cc  CoreUtils.h  Crash.cc  DebugStreamLevels.txt  DiagsConfig.cc  DiagsConfig.h  DynamicStats.h  Error.cc  Error.h  EventName.cc  EventName.h  FetchSM.cc  FetchSM.h  Freer.h  HostStatus.cc  HostStatus.h  HttpAPIHooks.cc  HttpAPIHooks.h  HttpTransStats.h  ICP.cc  (+128 more)
rc/: CMakeLists.txt  Makefile.am  solaris.txt  trafficserver.conf.in  trafficserver.in  trafficserver.rules.in  trafficserver.service.in  trafficserver.xml.in  update_records.cc
tests/: .gitignore  CMakeLists.txt  Makefile.am  Pipfile  README.md  autest-parallel.py  autest-parallel.py.in  autest.sh  autest.sh.in  bootstrap.py  getting_started.md  prepare_proxy_verifier.sh  proxy-verifier-checksum.txt  proxy-verifier-version.txt  pyproject.toml  run-h2-flow-test.sh  serial_tests.txt  test-env-check.sh
tools/: Dockerfile-h3tools  Makefile.am  apichecker.pl  apply-pr.sh  autopep8.sh  build_boringssl_h3_tools.sh  build_h3_tools.sh  build_openssl_h3_tools.sh  changelog.pl  check-unused-dependencies  clang-format.sh  cmake-format.sh  code-make  compare_records.pl  compare_servers.pl  cvtremappi  edge_net_db_csv_to_yaml.py  files_changed_sincetag.sh  freelist_diff.pl  gdb-helpers.py  gdb_mutex_contention.pl  insnew  install_cmake.sh  ipm-configure  ipm-usage  mkheader  push.pl  slow_log_report.pl  sni_lua_to_yaml.pl  traffic_cacheable.pl  traffic_primer  traffic_shell.pl  traffic_via.pl  trafficserver.pc.in  tspush  tsxs.in  whitespace-format.sh  yapf.sh
(+13309 files in other folders)
